--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,7 +4,8 @@
 <head>
     <%= require('html-loader!./_page-partial.html') %>
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <meta name="description" content="Steven de Graaf is a professional Sales Manager and Coach with a long history of satisfied customers">
+    <meta name="description"
+          content="Steven de Graaf is a professional Sales Manager and Coach with a long history of satisfied customers">
 </head>
 
 <body>
@@ -21,38 +22,50 @@
             <ul>
                 <li class="navlink-item">
                     <a class="navlink-link" href="tel:+31645048407">
-                        <img src="../images/phone-icon.svg" alt="Phone Icon" aria-hidden="true"><span class="navlink-text">+316 450 48 407</span>
+                        <img src="../images/phone-icon.svg" alt="Phone Icon" aria-hidden="true"><span
+                            class="navlink-text">+316 450 48 407</span>
                     </a>
                 </li>
                 <li class="navlink-item">
                     <a class="navlink-link" href="mailto:graafdesteven@outlook.com" target="_blank">
-                        <img src="../images/email-icon.svg" alt="Email Icon" aria-hidden="true"><span class="navlink-text">graafdesteven@outlook.com</span>
+                        <img src="../images/email-icon.svg" alt="Email Icon" aria-hidden="true"><span
+                            class="navlink-text">graafdesteven@outlook.com</span>
                     </a>
                 </li>
                 <li class="navlink-item">
-                    <a class="navlink-link" href="https://linkedin.com/in/steven-de-graaf-a4486b128/" target="_blank" rel="noopener">
-                        <img src="../images/linkedin-icon.svg" alt="Linkedin Icon" aria-hidden="true" ><span class="navlink-text">Steven de Graaf</span>
+                    <a class="navlink-link" href="https://linkedin.com/in/steven-de-graaf-a4486b128/" target="_blank"
+                       rel="noopener">
+                        <img src="../images/linkedin-icon.svg" alt="Linkedin Icon" aria-hidden="true"><span
+                            class="navlink-text">Steven de Graaf</span>
                     </a>
                 </li>
             </ul>
         </div>
     </header>
 
-        <div id="body-content-wrapper">
-            <div id="body-content--about">
-                <div class="content-text">
-                    <h1>Hoi, ik ben Steven!</h1>
-                    <p class="about-paragraph">Ik interesseer me in het creëren van bestaansrecht bij het midden - en kleinbedrijf met een maatschappelijk doel. De praktijk toont keer op keer aan: de combinatie van het trainen, coachen en ondersteunen van een team is een meerwaarde voor elk bedrijf. Benieuwd? Kijk gerust even rond!</p>
-                </div>
-            </div>
-
-            <div id="body-content--navlinks">
-                <div id="about-box" class="content-navbox" onclick="window.location.href='over_mij.html'"><a href="over_mij.html" class="content-navlink"><p>Over Mij</p></a></div>
-                <div id="coops-box" class="content-navbox" onclick="window.location.href='projecten.html'"><a href="projecten.html" class="content-navlink"><p>Projecten</p></a></div>
-                <div id="sales-box" class="content-navbox" onclick="window.location.href='./sales.html'"><a href="./sales.html" class="content-navlink"><p>Sales</p></a></div>
-                <div id="extra-box" class="content-navbox" onclick="window.location.href='extra.html'"><a href="extra.html" class="content-navlink"><p>Extra</p></a></div>
+    <div id="body-content-wrapper">
+        <div id="body-content--about">
+            <div class="content-text">
+                <h1>Hoi, ik ben Steven!</h1>
+                <p class="about-paragraph">Ik interesseer me in het creëren van bestaansrecht bij het midden - en
+                    kleinbedrijf met een maatschappelijk doel. De praktijk toont keer op keer aan: de combinatie van het
+                    trainen, coachen en ondersteunen van een team is een meerwaarde voor elk bedrijf. Benieuwd? Kijk
+                    gerust even rond!</p>
             </div>
         </div>
+
+        <div id="body-content--navlinks">
+            <div id="about-box" class="content-navbox" onclick="window.location.href='over_mij.html'"><a
+                    href="over_mij.html" class="content-navlink"><p>Over Mij</p></a></div>
+            <div id="coops-box" class="content-navbox" onclick="window.location.href='projecten.html'"><a
+                    href="projecten.html" class="content-navlink"><p>Projecten</p></a></div>
+            <div id="sales-box" class="content-navbox" onclick="window.location.href='./sales.html'"><a
+                    href="./sales.html" class="content-navlink"><p>Sales</p></a></div>
+            <div id="extra-box" class="content-navbox" onclick="window.location.href='extra.html'">
+                <a href="extra.html" class="content-navlink"><p>Extra</p></a>
+            </div>
+        </div>
+    </div>
 </div>
 
 </body>
