--- a/src/pages/sales.html
+++ b/src/pages/sales.html
@@ -11,7 +11,7 @@
 <div id="body-wrapper">
     <%= require('html-loader!./_header.html') %>
 
-    <div class="project-text-wrapper">
+    <div id="sales-text-wrapper">
         <div class="texts">
             <p>In het contact wat ik heb gehad met verschillende bedrijven ben ik erachter gekomen dat zij vaak een goed idee hebben, maar moeite hebben met de uitvoering ervan. Ik help met het creëren van naamsbekendheid en bestaansrecht voor bedrijven met een maatschappelijk doel onder de noemer ‘sales’.</p>
             <p>Via een ‘lead by example’ attitude ben ik ondersteunend aan het bedrijf. Ik kijk naar de behoeftes van een bedrijf door eventuele knelpunten te achterhalen. Door middel van coaching zorg ik ervoor dat gestelde doelen worden behaald. Voor een duurzame samenwerking met de bedrijven train ik teams zodat zij vanuit dezelfde kennis leren handelen. Zo leer ik bedrijven hoe ze zichzelf gezond kunnen houden.</p>
