--- a/src/pages/projecten.html
+++ b/src/pages/projecten.html
@@ -12,27 +12,29 @@
     <%= require('html-loader!./_header.html') %>
 
     <div id="project-content-wrapper">
-        <p>De projecten waar een samenwerking mee wordt aangegaan hebben allemaal een doel: het verbeteren van de
-            maatschappij en de gezondheid van mensen. Het is ontzettend belangrijk dat bedrijven de hulp die ze krijgen
-            weer doorgeven aan een ander. Dit is een van de basisvoorwaarden voor een samenwerking wordt aangegaan.</p>
+        <div class="texts">
+            <p>De projecten waar een samenwerking mee wordt aangegaan hebben allemaal een doel: het verbeteren van de
+                maatschappij en de gezondheid van mensen. Het is ontzettend belangrijk dat bedrijven de hulp die ze krijgen
+                weer doorgeven aan een ander. Dit is een van de basisvoorwaarden voor een samenwerking wordt aangegaan.</p>
 
-        <h1>Opleidingsadviseur bij het NLP-instituut</h1>
-        <p>Neuro Linguïstisch Programmeren is de studie naar de onbewuste processen die de basis zijn voor succesvol
-            gedrag en effectieve communicatie. Het NLP-instituut verzorgd NLP-opleidingen tot internationaal erkend
-            practitioner, master trainer en/of master coach. Roderik Kelderman, de oprichter van het NLP-instituut,
-            doet niets liever dan mensen opleiden tot een betere versie van hunzelf. In 2018 en 2019 waren zij beste
-            opleider van Nederland.</p>
+            <h1>Opleidingsadviseur bij het NLP-instituut</h1>
+            <p>Neuro Linguïstisch Programmeren is de studie naar de onbewuste processen die de basis zijn voor succesvol
+                gedrag en effectieve communicatie. Het NLP-instituut verzorgd NLP-opleidingen tot internationaal erkend
+                practitioner, master trainer en/of master coach. Roderik Kelderman, de oprichter van het NLP-instituut,
+                doet niets liever dan mensen opleiden tot een betere versie van hunzelf. In 2018 en 2019 waren zij beste
+                opleider van Nederland.</p>
 
-        <h1>Energy Control Academy</h1>
-        <p>Energy Control Academy helpt voornamelijk bij het herstel van mensen met vermoeidheids- en burn-out
-            klachten. De innovatieve methode legt de focus op ingekaderde beweging in combinatie met
-            ademhalingstechnieken en wordt daarnaast ook gebruikt in de begeleiding van (top)sporters. Naast het
-            creëren van naamsbekendheid en bestaansrecht voor Energy Control Academy begeleid Steven mensen in het
-            traject zodat zij op een fijne manier weer de alledaagse dingen in het leven kunnen oppakken.</p>
+            <h1>Energy Control Academy</h1>
+            <p>Energy Control Academy helpt voornamelijk bij het herstel van mensen met vermoeidheids- en burn-out
+                klachten. De innovatieve methode legt de focus op ingekaderde beweging in combinatie met
+                ademhalingstechnieken en wordt daarnaast ook gebruikt in de begeleiding van (top)sporters. Naast het
+                creëren van naamsbekendheid en bestaansrecht voor Energy Control Academy begeleid Steven mensen in het
+                traject zodat zij op een fijne manier weer de alledaagse dingen in het leven kunnen oppakken.</p>
 
-        <h1>Pachira investments</h1>
-        <p>Pachira investments is een investeringsmaatschappij die investeringen aanneemt voor kapitaalgroei, zodat
-            zij die uiteindelijk kunnen herinvesteren in maatschappelijke doelen en het helpen van het mkb.</p>
+            <h1>Pachira investments</h1>
+            <p>Pachira investments is een investeringsmaatschappij die investeringen aanneemt voor kapitaalgroei, zodat
+                zij die uiteindelijk kunnen herinvesteren in maatschappelijke doelen en het helpen van het mkb.</p>
+        </div>
     </div>
 
 </body>
