--- a/src/pages/sales.html
+++ b/src/pages/sales.html
@@ -11,8 +11,9 @@
 <div id="body-wrapper">
     <%= require('html-loader!./_header.html') %>
 
-    <div id="sales-text-wrapper">
+    <div class="text-wrapper" id="sales-wrapper">
         <div class="texts">
+            <h1>Sales</h1>
             <p>In het contact wat ik heb gehad met verschillende bedrijven ben ik erachter gekomen dat zij vaak een goed idee hebben, maar moeite hebben met de uitvoering ervan. Ik help met het creëren van naamsbekendheid en bestaansrecht voor bedrijven met een maatschappelijk doel onder de noemer ‘sales’.</p>
             <p>Via een ‘lead by example’ attitude ben ik ondersteunend aan het bedrijf. Ik kijk naar de behoeftes van een bedrijf door eventuele knelpunten te achterhalen. Door middel van coaching zorg ik ervoor dat gestelde doelen worden behaald. Voor een duurzame samenwerking met de bedrijven train ik teams zodat zij vanuit dezelfde kennis leren handelen. Zo leer ik bedrijven hoe ze zichzelf gezond kunnen houden.</p>
             <p>Mijn visie op sales is constant in ontwikkeling. Daarom vind ik het erg interessant om over verschillende ervaringen die mensen opdoen in het bedrijfsleven te horen. Interesse? Maak dan een afspraak om te bellen.</p>
