Change many media queries and much CSS for the texts page
Remove the empty files for the old pages

--- a/src/pages/projecten.html
+++ b/src/pages/projecten.html
@@ -14,7 +14,7 @@
     <div class="text-wrapper" id="project-wrapper">
         <div class="texts">
             <h1>Projecten</h1>
-            <p>De projecten waar een samenwerking mee wordt aangegaan hebben allemaal een doel: het verbeteren van de
+            <p class=intro-paragraph>De projecten waar een samenwerking mee wordt aangegaan hebben allemaal een doel: het verbeteren van de
                 maatschappij en de gezondheid van mensen. Het is ontzettend belangrijk dat bedrijven de hulp die ze krijgen
                 weer doorgeven aan een ander. Dit is een van de basisvoorwaarden voor een samenwerking wordt aangegaan.</p>
 
