--- a/src/pages/extra.html
+++ b/src/pages/extra.html
@@ -14,7 +14,7 @@
     <div class="text-wrapper" id="extra-wrapper">
         <div class="texts">
             <h1>Extra</h1>
-            <p>Om een positieve bijdrage te leveren aan mijn omgeving hou ik mezelf naast mijn werk ook graag bezig met
+            <p class="intro-paragraph">Om een positieve bijdrage te leveren aan mijn omgeving hou ik mezelf naast mijn werk ook graag bezig met
                 extra projecten gericht op onderwijs en beweging. Leren is een wederzijdse ervaring, en zo houdt mijn
                 omgeving mij net zo scherp als ik hun!</p>
             <h2>Zwemmen</h2>
